--- a/Unit 4/alpha-blog/app/views/pages/home.html.erb
+++ b/Unit 4/alpha-blog/app/views/pages/home.html.erb
@@ -8,5 +8,7 @@
 </head>
 <body>
     <p>Home page</p>
+    <%= link_to 'Articles list', articles_path %> |
+    <%= link_to 'About us', about_path %>
 </body>
 </html>
