--- a/Unit 4/alpha-blog/app/views/articles/index.html.erb
+++ b/Unit 4/alpha-blog/app/views/articles/index.html.erb
@@ -18,7 +18,7 @@
         <td><%= article.tile %></td>
         <td><%= article.description %></td>
         <td><%= article.text %></td>
-        <td><%= link_to 'Show', article %></td>
+        <td><%= link_to 'Show', articles_path %></td>
         <td><%= link_to 'Edit', edit_article_path(article) %></td>
         <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
@@ -28,4 +28,5 @@
 
 <br>
 
-<%= link_to 'New Article', new_article_path %>
+<%= link_to 'New Article', new_article_path %> |
+<%= link_to 'Home', root_path %> 
