--- a/Unit 5/alpha-blog/app/views/pages/home.html.erb
+++ b/Unit 5/alpha-blog/app/views/pages/home.html.erb
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <p>Home page</p>
-    <%= link_to 'Articles list', articles_path %> |
-    <%= link_to 'About us', about_path %>
+<body id = "home-body">
+    <div class="container " id = "home-container">
+        <div class="jumbotron  text-center text-white">
+            <div class="container ">
+                <h1 class="display-4">Fluid jumbotron</h1>
+                <p class="lead">Это модифицированный jumbotron</p>
+                <hr class="my-4">
+                <button type="button" class="btn btn-light">Light</button>
+            </div>
+        </div>
+    </div>
 </body>
-</html>
+
+
