--- a/Unit 5/alpha-blog/app/views/articles/_form.html.erb
+++ b/Unit 5/alpha-blog/app/views/articles/_form.html.erb
@@ -1,32 +1,26 @@
-<%= form_with(model: article) do |form| %>
-  <% if article.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(article.errors.count, "error") %> prohibited this article from being saved:</h2>
-
-      <ul>
-        <% article.errors.each do |error| %>
-          <li><%= error.full_message %></li>
+<div class="container">
+  <%= render 'shared/errors' %>
+  <div class="row justify-content-center">
+      <div class="col-10">
+        <%= form_with(model: article, class: "shadow p-3 mb-3 bg-info rounded", local: true) do |f| %>
+          <div class="form-group row">
+            <%= f.label :tile, class: "col-2 col-form-label text-light" %>
+            <div class="col-10">
+              <%= f.text_field :tile, class: "form-control shadow rounded", placeholder: "Title of article" %>
+            </div>
+          </div>
+  <div class="form-group row">
+            <%= f.label :description, class: "col-2 col-form-label text-light" %>
+            <div class="col-10"> 
+              <%= f.text_area  :description, rows: 10, class: "form-control shadow rounded", placeholder: "Description of article" %>
+            </div>
+          </div>
+  <div class="form-group row justify-content-center">
+            <%= f.submit class: "btn btn-outline-light btn-lg" %>
+          </div>
         <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= form.label :tile %>
-    <%= form.text_field :tile %>
-  </div>
-
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.text_field :description %>
-  </div>
-
-  <div class="field">
-    <%= form.label :text %>
-    <%= form.text_field :text %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+        <div class="text-center">
+            <%= link_to '[ Cancel and return to articles listing ]', articles_path, class: "text-info" %>
+        </div>
+      </div>
+</div>
