--- a/Unit 5/alpha-blog/app/views/articles/index.html.erb
+++ b/Unit 5/alpha-blog/app/views/articles/index.html.erb
@@ -1,32 +1,31 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Articles</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Tile</th>
-      <th>Description</th>
-      <th>Text</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+  <h1 class="text-center mt-4">Articles</h1>
+  <div class="container">
     <% @articles.each do |article| %>
-      <tr>
-        <td><%= article.tile %></td>
-        <td><%= article.description %></td>
-        <td><%= article.text %></td>
-        <td><%= link_to 'Show', articles_path %></td>
-        <td><%= link_to 'Edit', edit_article_path(article) %></td>
-        <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <div class="row justify-content-md-center">
+        <div class="col-8 mt-4">
+          <div class="card text-center shadow mb-5 bg-white rounded">
+            <div class="card-header font-italic">
+              Liubomyr Ghios
+            </div>
+            <div class="card-body">
+              <h5 class="card-title"><%= link_to article.tile,articles_path, class: "text-success" %></h5>
+              <p class="card-text"><%= article.description %></p>
+              <p class="card-text"> <%= article.text %></p>
+              <%= link_to "View", article, class: "btn btn-outline-success" %>
+              <%= link_to "Edit", edit_article_path(article), class: "btn btn-outline-info" %>
+              <%= link_to "Delete", article , method: :delete, data: { confirm: 'Are you sure?' } , class: "btn btn-outline-danger", method: :delete, data: {confirm: "Are you sure?"} %>
+            </div>
+            <div class="card-footer text-muted">
+              <small>Created at
+              <%= article.created_at %>
+              Updated at
+              <%= article.updated_at %>
+              </small>
+            </div>
+          </div>
+        </div>
+      </div>
+    <%end%>
+  </div>
 
-<br>
 
-<%= link_to 'New Article', new_article_path %> |
-<%= link_to 'Home', root_path %> 
