--- a/Unit 5/alpha-blog/app/views/layouts/application.html.erb
+++ b/Unit 5/alpha-blog/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
   </head>
 
   <body>
+    <%= render 'layouts/navigation' %>
+    <div id="page-content">
     <%= yield %>
+    </div>
+    <%= render 'layouts/footer' %>
+    
   </body>
 </html>
