--- a/Unit 6/alpha-blog/app/views/articles/show.html.erb
+++ b/Unit 6/alpha-blog/app/views/articles/show.html.erb
@@ -21,7 +21,7 @@
         <div class="col-8 mt-4">
           <div class="card text-center shadow mb-5 bg-white rounded">
             <div class="card-header font-italic">
-              Liubomyr Ghios
+              by <%= @article.user.username if @article.user%>
             </div>
             <div class="card-body">
               <div class="card-text text-left">
