--- a/Unit 6/alpha-blog/app/views/pages/home.html.erb
+++ b/Unit 6/alpha-blog/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
                 <h1 class="display-4">Fluid jumbotron</h1>
                 <p class="lead">Это модифицированный jumbotron</p>
                 <hr class="my-4">
-                <button type="button" class="btn btn-light">Light</button>
+                <%= link_to "Sign up!", signup_path, class: "btn btn-light"%>
             </div>
         </div>
     </div>
