--- a/Unit 6/alpha-blog/app/views/shared/_errors.html.erb
+++ b/Unit 6/alpha-blog/app/views/shared/_errors.html.erb
@@ -1,7 +1,7 @@
-<% if @article.errors.any? %>
+<% if obj.errors.any? %>
     <div class="alert alert-danger alert-dismissible fade show" role="alert">
-        <h5><%= pluralize(@article.errors.count, "error") %> Prohibited this article from being saved:</h5>
-        <% @article.errors.each do |error| %>
+        <h5><%= pluralize(obj.errors.count, "error") %> Prohibited this <%= obj.class.name.downcase %> from being saved:</h5>
+        <% obj.errors.each do |error| %>
             <ul>
               <li><%= error.full_message %></li>
             </ul>
