--- a/Unit 6/alpha-blog/app/views/articles/_article.html.erb
+++ b/Unit 6/alpha-blog/app/views/articles/_article.html.erb
@@ -1,19 +1,22 @@
  <div class="container">
-    <h1>Article</h1>
     <% @articles.each do |article| %>
       <div class="row justify-content-md-center">
         <div class="col-8 mt-4">
           <div class="card text-center shadow mb-5 bg-white rounded">
             <div class="card-header font-italic">
-              by <%= article.user.username if article.user%>
+              <% if article.user %>
+              by <%= link_to article.user.username, user_path(article.user) %>
+            <% end %>
             </div>
               <div class="card-body">
-                <h5 class="card-title"><%= link_to article.tile,articles_path, class: "text-success" %></h5>
+                <h5 class="card-title"><%= link_to article.tile,article, class: "text-success" %></h5>
                 <p class="card-text"><%= article.description %></p>
                 <p class="card-text"> <%= article.text %></p>
                 <%= link_to "View", article, class: "btn btn-outline-success" %>
-                <%= link_to "Edit", edit_article_path(article), class: "btn btn-outline-info" %>
-                <%= link_to "Delete", article , method: :delete, data: { confirm: 'Are you sure?' } , class: "btn btn-outline-danger", method: :delete, data: {confirm: "Are you sure?"} %>
+                <% if logged_in? && (article.user == current_user || current_user.admin?) %>
+                  <%= link_to "Edit", edit_article_path(article), class: "btn btn-outline-info" %>
+                  <%= link_to "Delete", article , method: :delete, data: { confirm: 'Are you sure?' } , class: "btn btn-outline-danger", method: :delete, data: {confirm: "Are you sure?"} %>
+                <% end %>
               </div>
             <div class="card-footer text-muted">
               <small>Created at
