--- a/Unit 6/alpha-blog/app/views/articles/show.html.erb
+++ b/Unit 6/alpha-blog/app/views/articles/show.html.erb
@@ -22,14 +22,17 @@
           <div class="card text-center shadow mb-5 bg-white rounded">
             <div class="card-header font-italic">
               by <%= @article.user.username if @article.user%>
+              <%= link_to gravatar_for(@article.user), user_path(@article.user) %>
             </div>
             <div class="card-body">
               <div class="card-text text-left">
                 <p><%= simple_format(@article.description)  %></p>
                 <p class="card-text text-left"> <%= simple_format(@article.text) %></p>
               </div>
-              <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-info" %>
-              <%= link_to "Delete", @article , method: :delete, data: { confirm: 'Are you sure?' } , class: "btn btn-outline-danger", method: :delete, data: {confirm: "Are you sure?"} %>
+              <% if logged_in? && (@article.user == current_user || current_user.admin?) %>
+                <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-info" %>
+                <%= link_to "Delete", @article , method: :delete, data: { confirm: 'Are you sure?' } , class: "btn btn-outline-danger", method: :delete, data: {confirm: "Are you sure?"} %>
+              <%end%>
               <div class = "m-2"><%= link_to "Back to articles", articles_path, class: "btn btn-outline-success" %></div>
             </div>
             <div class="card-footer text-muted">
